syntax="proto3";

package iomomi_pb;

import "Dir.proto";

message EntranceEntity {
	float posX = 1;
	float posY = 2;
	float posZ = 3;
	Dir dir = 4;
	bool isExit = 5;
	fixed32 name = 6;
}
